--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     <div class="container">
         <div class="header">
             <h1>시니어 재취업 적성 검사</h1>
-            <p>10개의 질문으로 찾는 나에게 딱 맞는 직업</p>
+            <p>10개의 질문으로 찾는 나에게 딱 맞는 직업 찾기</p>
         </div>
         
         <div class="progress-bar">
@@ -401,7 +401,7 @@
             "건설 단순 종사원": { category: "건설", physical: "high", social: "low", stress: "low", skill: "low", description: "건설 현장에서 자재 운반 등 보조 업무를 담당합니다." },
             "건설수주 영업원": { category: "영업", physical: "low", social: "high", stress: "high", skill: "high", description: "건설 프로젝트 수주를 위한 영업 활동을 수행합니다." },
             "건축설비 기술자": { category: "기술직", physical: "medium", social: "medium", stress: "high", skill: "high", description: "건축물의 전기, 기계 설비를 설계하고 시공을 관리합니다." },
-            "경비원": { category: "보안", physical: "low", social: "medium", stress: "low", skill: "low", description: "건물이나 시설의 안전을 지키고 출입을 관리합니다." },
+            "경비원": { category: "보안", physical: "medium", social: "medium", stress: "low", skill: "low", description: "건물이나 시설의 안전을 지키고 출입을 관리합니다." },
             "공업기계 정비원": { category: "기술직", physical: "high", social: "low", stress: "medium", skill: "high", description: "산업용 기계의 정비와 수리를 담당합니다." },
             "기숙사사감": { category: "관리직", physical: "low", social: "high", stress: "medium", skill: "medium", description: "기숙사 생활 지도와 시설 관리를 담당합니다." },
             "돌봄 종사원": { category: "돌봄서비스", physical: "medium", social: "high", stress: "medium", skill: "medium", description: "아동, 노인 등 돌봄이 필요한 대상자를 케어합니다." },
