--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
             <!-- 시작 화면 -->
             <div class="start-screen" id="startScreen">
                 <h2>환영합니다!</h2>
-                <div class="visitor-counter">
+                <!-- <div class="visitor-counter">
                     <div class="visitor-stats">
                         <div class="stat-item">
                             <h3>오늘의 방문자</h3>
@@ -591,7 +591,7 @@
                             <p class="visitor-count" id="totalVisitorCount">0</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <p>
                     이 검사는 귀하의 경험, 선호도, 역량을 바탕으로<br>
                     50대 이상 시니어에게 적합한 재취업 직종을 추천해드립니다.<br><br>
