--- a/index.html
+++ b/index.html
@@ -958,8 +958,8 @@
             <div class="sidebar-logo">
                 <div class="sidebar-logo-icon">👔</div>
                 <div>
-                    <div class="sidebar-title">시니어 케어</div>
-                    <div class="sidebar-subtitle">50+ 전용 서비스</div>
+                    <div class="sidebar-title">시니어 일자리</div>
+                    <div class="sidebar-subtitle">50+ 맞춤형 취업 지원 서비스</div>
                 </div>
             </div>
         </div>
@@ -991,8 +991,8 @@
     <div class="main-content">
         <div class="container">
             <div class="header">
-                <h1>시니어 케어 서비스</h1>
-                <p>50+ 전용 맞춤형 진로 및 취업 지원 서비스</p>
+                <h1>시니어 일자리 서비스</h1>
+                <p>50+ 맞춤형 취업 지원 서비스</p>
             </div>
             
             <div class="content">
