--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>시니어 재취업 적성 검사 - 나에게 맞는 직업 찾기</title>
+    <title>시니어 취업 적성 검사 - 나에게 맞는 직업 찾기</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👔</text></svg>">
     
     <!-- Supabase 클라이언트 추가 -->
@@ -1002,7 +1002,7 @@
                             <h3>나에게 맞는 직업 찾기</h3>
                             <p>
                                 10개의 질문으로 50대 이상 시니어에게<br>
-                                적합한 재취업 직종을 추천해드립니다.<br>
+                                적합한 취업 직종을 추천해드립니다.<br>
                                 경험과 선호도를 바탕으로 맞춤 직업을 찾아보세요.
                             </p>
                             <div class="card-cta">시작하기 →</div>
@@ -1032,7 +1032,7 @@
                         <h2>나에게 맞는 직업 찾기</h2>
                         <p>
                             이 검사는 귀하의 경험, 선호도, 역량을 바탕으로<br>
-                            50대 이상 시니어에게 적합한 재취업 직종을 추천해드립니다.<br><br>
+                            50대 이상 시니어에게 적합한 취업 직종을 추천해드립니다.<br><br>
                             총 10개의 질문에 답해주시면,<br>
                             가장 적합한 직업 3가지를 추천해드립니다.
                         </p>
@@ -1363,7 +1363,7 @@
                                 <h3>나에게 맞는 직업 찾기</h3>
                                 <p>
                                     10개의 질문으로 50대 이상 시니어에게<br>
-                                    적합한 재취업 직종을 추천해드립니다.<br>
+                                    적합한 취업 직종을 추천해드립니다.<br>
                                     경험과 선호도를 바탕으로 맞춤 직업을 찾아보세요.
                                 </p>
                                 <div class="card-cta">시작하기 →</div>
@@ -1393,7 +1393,7 @@
                             <h2>나에게 맞는 직업 찾기</h2>
                             <p>
                                 이 검사는 귀하의 경험, 선호도, 역량을 바탕으로<br>
-                                50대 이상 시니어에게 적합한 재취업 직종을 추천해드립니다.<br><br>
+                                50대 이상 시니어에게 적합한 취업 직종을 추천해드립니다.<br><br>
                                 총 10개의 질문에 답해주시면,<br>
                                 가장 적합한 직업 3가지를 추천해드립니다.
                             </p>
