--- a/index.html
+++ b/index.html
@@ -1941,7 +1941,15 @@
                     { text: "서비스업이나 요리 경험이 있음", value: { service: 3 } },
                     { text: "특별한 경력 없이 새로운 도전을 원함", value: { newbie: 3 } }
                 ]
-            }
+            },
+            {
+                text: "거주지 근처의 국비지원 학원을 추천받으시겠습니까?",
+                options: [
+                    { text: "네", value: {} },
+                    { text: "아니오", value: {} },
+                ]
+            },
+            
         ];
 
         // 자격증 검사 함수들
@@ -2935,7 +2943,14 @@
                     { text: "서비스/판매 분야", value: { service: 3 } },
                     { text: "특별한 경력 없음/새로운 도전", value: { new: 3 } }
                 ]
-            }
+            },
+            {
+                text: "거주지 근처의 국비지원 학원을 추천받으시겠습니까?",
+                options: [
+                    { text: "네", value: {} },
+                    { text: "아니오", value: {} },
+                ]
+            },
         ];
 
         let currentQuestion = 0;
