--- a/index.html
+++ b/index.html
@@ -983,6 +983,14 @@
         </div>
     </div>
 
+        <!-- 연락처 정보 -->
+    <div class="sidebar-footer">
+        <div class="contact-info">
+            <div class="contact-title">Contact</div>
+            <div class="contact-email">5soyoung9988@gmail.com</div>
+        </div>
+    </div>
+
     <!-- 메인 컨텐츠 영역 -->
     <div class="main-content">
         <div class="container">
