--- a/index.html
+++ b/index.html
@@ -643,6 +643,38 @@
             background: #dee2e6;
         }
 
+        /* CSS에 추가할 스타일 */
+        /* 사이드바 하단 연락처 */
+        .sidebar-footer {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 20px 30px 30px;
+            border-top: 1px solid rgba(102, 126, 234, 0.1);
+        }
+
+        .contact-info {
+            text-align: center;
+        }
+
+        .contact-title {
+            font-size: 0.8em;
+            color: #999;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-bottom: 8px;
+        }
+
+        .contact-email {
+            font-size: 0.85em;
+            color: #667eea;
+            font-weight: 500;
+            word-break: break-all;
+            line-height: 1.3;
+        }
+
         /* 메인 대시보드 스타일 */
         .main-dashboard {
             text-align: center;
@@ -980,16 +1012,18 @@
                     취업 상담
                 </a>
             </div>
+
+                    <!-- 연락처 정보 -->
+            <div class="sidebar-footer">
+                <div class="contact-info">
+                    <div class="contact-title">Contact</div>
+                    <div class="contact-email">5soyoung9988@gmail.com</div>
+                </div>
+            </div>
         </div>
     </div>
 
-        <!-- 연락처 정보 -->
-    <div class="sidebar-footer">
-        <div class="contact-info">
-            <div class="contact-title">Contact</div>
-            <div class="contact-email">5soyoung9988@gmail.com</div>
-        </div>
-    </div>
+
 
     <!-- 메인 컨텐츠 영역 -->
     <div class="main-content">
