--- a/index.html
+++ b/index.html
@@ -2278,13 +2278,13 @@
             // 조건부 추가 버튼
             let additionalBtn = document.createElement('button');
             if (window.certLastSurveyAnswer === 0) { // "네" 선택한 경우
-                additionalBtn.textContent = '국비지원학원 추천받기';
+                additionalBtn.textContent = '자격증 강의 무료 수강';
             } else if (window.certLastSurveyAnswer === 1) { // "아니오" 선택한 경우
-                additionalBtn.textContent = '5060 일자리 단톡방';
+                additionalBtn.textContent = '자격증 강의 무료 수강';
             }
             
             additionalBtn.onclick = () => {
-                window.open('https://open.kakao.com/o/gctO0zHh', '_blank');
+                window.open('https://soyoung.dbsn.kr', '_blank');
             };
             additionalBtn.style.cssText = `
                 background: #ffd700;
@@ -3146,13 +3146,13 @@
             // 조건부 추가 버튼
             let additionalBtn = document.createElement('button');
             if (lastSurveyAnswer === 0) { // "네" 선택한 경우
-                additionalBtn.textContent = '국비지원학원 추천받기';
+                additionalBtn.textContent = '자격증 강의 무료 수강';
             } else if (lastSurveyAnswer === 1) { // "아니오" 선택한 경우
-                additionalBtn.textContent = '5060 일자리 단톡방';
+                additionalBtn.textContent = '자격증 강의 무료 수강';
             }
             
             additionalBtn.onclick = () => {
-                window.open('https://open.kakao.com/o/gctO0zHh', '_blank');
+                window.open('https://soyoung.dbsn.kr', '_blank');
             };
             additionalBtn.style.cssText = `
                 background: #ffd700;
