--- a/index.html
+++ b/index.html
@@ -2284,7 +2284,7 @@
             }
             
             additionalBtn.onclick = () => {
-                window.open('https://soyoung.dbsn.kr', '_blank');
+                window.open('https://biseo.store/', '_blank');
             };
             additionalBtn.style.cssText = `
                 background: #ffd700;
@@ -3152,7 +3152,7 @@
             }
             
             additionalBtn.onclick = () => {
-                window.open('https://soyoung.dbsn.kr', '_blank');
+                window.open('https://biseo.store/', '_blank');
             };
             additionalBtn.style.cssText = `
                 background: #ffd700;
