--- a/index.html
+++ b/index.html
@@ -2284,7 +2284,7 @@
             }
             
             additionalBtn.onclick = () => {
-                window.open('https://biseo.store/', '_blank');
+                window.open('https://www.kpei.co.kr/web.asp?web=1116', '_blank');
             };
             additionalBtn.style.cssText = `
                 background: #ffd700;
@@ -3152,7 +3152,7 @@
             }
             
             additionalBtn.onclick = () => {
-                window.open('https://biseo.store/', '_blank');
+                window.open('https://www.kpei.co.kr/web.asp?web=1116', '_blank');
             };
             additionalBtn.style.cssText = `
                 background: #ffd700;
