--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>시니어 취업 적성 검사 - 나에게 맞는 직업 찾기</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👔</text></svg>">
     
-    <!-- Supabase 클라이언트 추가 -->
+    <!-- Supabase 클라이언트 추가d -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     
     <style>
